image_explorer/public/css/image_explorer.css
.image-explorer-description {
    padding-top: 10px;
    padding-bottom: 10px;
}

.image-explorer-wrapper {
    position: relative;
}

.image-explorer-hotspot-reveal {
    position: absolute;
    background-color: rgba(102, 165, 181, 0.90);
    color: #000000;
    left: 100%;
    top: 25%;
    z-index: 2;
    display: none;
    overflow-y: scroll;
    cursor: default;
}

.image-explorer-hotspot-content-wrapper {
    color: #ffffff;
    margin: 35px 15px 15px 15px;
}

.image-explorer-hotspot-reveal.active {
    display: block;
    opacity: 1;
}

.image-explorer-hotspot-reveal-header {
    font-family: "Open Sans", sans-serif;
    font-size: 16px;
}

.image-explorer-wrapper div.image-explorer-hotspot {
    background: url("/static/images/image-explorer-hotspot-sprite.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
    width: 41px;
    height: 41px;
    display: block;
    text-decoration: none;
    -webkit-transition: all 0.0s linear 0s;
    -moz-transition: all 0.0s linear 0s;
    transition: all 0.0s linear 0s;
}

div.image-explorer-hotspot a{
    color: #FFFFFF;
    font-weight: bold;
    text-decoration: underline;
}

.image-explorer-wrapper div.image-explorer-hotspot:hover {
    background-position: 0px -43px
}

div.image-explorer-hotspot .image-explorer-hotspot-reveal .image-explorer-hotspot-reveal-header p {
    margin: 10px 0px 10px 20px;
}

.image-explorer-hotspot-reveal-body {
    font-family: "Open Sans", sans-serif;
    font-size: 14px;
}

.image-explorer-hotspot .image-explorer-hotspot-reveal .image-explorer-hotspot-reveal-body ul {
    list-style-type: disc;
}

div.image-explorer-hotspot .image-explorer-hotspot-reveal .image-explorer-hotspot-reveal-body ul li {
    margin: 0 0 24px 17px;
}

.image-explorer-close-reveal {
    /* background: url("../images/image-explorer-reveal-close.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0); */
    float: right;
    margin-right: 8px;
    margin-top: 8px;
    margin-left: 20px;
    color: #FFFFFF;
    font-family: "fontawesome";
    font-size: 18pt;
    cursor: pointer;
}

.codemirror-editor-wrapper {
    border-style: solid;
    border-width: 1px;
}

.xblock-editor-error-message {
    display: none;
    padding-left: 10px;
    color: red;
}

